fix:  -header collapsed breakpoints  -section image cover

--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,5 +1,4 @@
 .root {
-    background-image: url("src/assets/images/background.jpg");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center center;
